# ReverbProject

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbFX.h
